fixed fullscreen on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -44,8 +44,6 @@
   justify-content: center;
   width: 60%;
   height: 100%;
-  /* border: 1px solid blue; */
-  
 }
 
 img,
@@ -60,8 +58,8 @@ iframe {
   z-index: 9999;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  height: 100%;
+  width: 100%;
   background-size: contain;
   background-repeat: no-repeat no-repeat;
   background-position: center center;
